--- a/optimize.ipynb
+++ b/optimize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,25 +37,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "resp = requests.post(\"http://localhost:8004/image/all\", json={\"image\": read_b64(\"/Users/wanghuan/Projects/anomaly/client/tests/test.png\"), \"ip_address\" :'234234343'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'image_content_id': '0d707527e7f7909f667a20e16e81abad',\n",
+       " 'is_sensitive': False,\n",
+       " 'sex_result': {'drawings': 31.0814,\n",
+       "  'hentai': 8.9694,\n",
+       "  'neutral': 58.9792,\n",
+       "  'porn': 0.6097,\n",
+       "  'sexy': 0.3603},\n",
+       " 'text_result': [{'text': '浏览', 'sensitive': False, 'sensitive_words': []},\n",
+       "  {'text': '女性历史月', 'sensitive': False, 'sensitive_words': []},\n",
+       "  {'text': 'Alpha：她引领声浪', 'sensitive': False, 'sensitive_words': []},\n",
+       "  {'text': 'Apple Music', 'sensitive': False, 'sensitive_words': []}],\n",
+       " 'window_result': False}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp = requests.post(\"http://localhost:8004/image/all\", json={\"image\": read_b64(\"/Users/wanghuan/Projects/anomaly/client/tests/test.png\"), \"ip_address\" :'234234343'})\n",
+    "resp.json()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resp = requests.post(\"http://localhost:8004/image/all\", json={\"image\": read_b64(\"/Users/wanghuan/Projects/anomaly/client/tests/test.png\"), \"ip_address\" :'234234343'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -80,9 +103,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "resp.json()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
