--- a/optimize.ipynb
+++ b/optimize.ipynb
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp = requests.post(\"http://localhost:8004/image/all\", json={\"image\": read_b64(\"/Users/wanghuan/Projects/anomaly/client/tests/test.png\"), \"ip_address\" :'234234343'})"
+    "resp = requests.post(\"http://localhost:8004/image/all\", json={\"image\": read_b64(\"/Users/wanghuan/Projects/anomaly/client/tests/mabi2.png\"), \"ip_address\" :'www.fuck.com'})"
    ]
   },
   {
