--- a/optimize.ipynb
+++ b/optimize.ipynb
@@ -6,18 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
-    "logging.basicConfig(level=logging.INFO)\n",
+    "\n",
+    "# !pip install pillow\n",
     "import requests\n",
     "from PIL import Image\n",
     "import io\n",
     "import base64\n",
-    "import os\n",
-    "from pathlib import Path\n",
     "import json\n",
-    "import shutil\n",
-    "\n",
-    "import time\n",
     "\n",
     "\n",
     "def read_b64(path):\n",
@@ -32,16 +27,65 @@
     "    # Convert the byte array to a base64 string\n",
     "    img_b64 = base64.b64encode(img_byte_arr).decode('utf-8')\n",
     "    \n",
-    "    return img_b64"
+    "    return img_b64\n",
+    "\n",
+    "image_path = \"/Users/wanghuan/Projects/anomaly/hx_client/test_data/WechatIMG1537.jpg\"\n",
+    "content_id = \"这就特么是个唯一id\"\n",
+    "\n",
+    "resp = requests.post(\"http://localhost:8004/image/all\", \n",
+    "                     json={\"image\": read_b64(image_path), \n",
+    "                           \"ip_address\" :content_id})\n",
+    "\n",
+    "print(resp.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "resp = requests.post(\"http://localhost:8004/image/all\", json={\"image\": read_b64(\"/Users/wanghuan/Projects/anomaly/client/tests/mabi2.png\"), \"ip_address\" :'www.fuck.com'})"
+    "import requests\n",
+    "\n",
+    "texts = ['我日狗，狗日我，我们都操他妈有病']\n",
+    "content_id = \"我特么是一个网站id\"\n",
+    "\n",
+    "resp = requests.post(\"http://localhost:8004/text/dfa\",json={\"text\": texts,\"ip_address\": content_id})\n",
+    "\n",
+    "print(resp.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'result': [{'text': '我日狗，狗日我，我们都操他妈有病',\n",
+       "   'sensitive': True,\n",
+       "   'sensitive_words': ['我日', '狗日', '操他']}]}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp.json()"
    ]
   },
   {
