--- a/optimize.ipynb
+++ b/optimize.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'image_content_id': '1487d79fdc747a6276b4b129edf5858c', 'is_sensitive': False, 'sex_result': {'drawings': 88.2351, 'hentai': 1.6320999999999999, 'neutral': 8.6472, 'porn': 0.4336, 'sexy': 1.052}, 'text_result': [{'text': '育咪', 'sensitive': False, 'sensitive_words': []}, {'text': '开展全民国家安全宣传教育', 'sensitive': False, 'sensitive_words': []}, {'text': '腾讯会议', 'sensitive': False, 'sensitive_words': []}], 'window_result': False}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# !pip install pillow\n",
@@ -29,7 +37,7 @@
     "    \n",
     "    return img_b64\n",
     "\n",
-    "image_path = \"/Users/wanghuan/Projects/anomaly/hx_client/test_data/WechatIMG1537.jpg\"\n",
+    "image_path = \"/Users/wanghuan/Projects/anomaly/client/tests/ccuu.jpg\"\n",
     "content_id = \"这就特么是个唯一id\"\n",
     "\n",
     "resp = requests.post(\"http://localhost:8004/image/all\", \n",
@@ -37,6 +45,36 @@
     "                           \"ip_address\" :content_id})\n",
     "\n",
     "print(resp.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'image_content_id': '1487d79fdc747a6276b4b129edf5858c',\n",
+       " 'is_sensitive': False,\n",
+       " 'sex_result': {'drawings': 88.2351,\n",
+       "  'hentai': 1.6320999999999999,\n",
+       "  'neutral': 8.6472,\n",
+       "  'porn': 0.4336,\n",
+       "  'sexy': 1.052},\n",
+       " 'text_result': [{'text': '育咪', 'sensitive': False, 'sensitive_words': []},\n",
+       "  {'text': '开展全民国家安全宣传教育', 'sensitive': False, 'sensitive_words': []},\n",
+       "  {'text': '腾讯会议', 'sensitive': False, 'sensitive_words': []}],\n",
+       " 'window_result': False}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp.json()"
    ]
   },
   {
